--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -12,10 +12,10 @@ on:
         description: 'Test scenario tags'
         required: true
         type: string
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
+      # environment:
+      #   description: 'Environment to run tests against'
+      #   type: environment
+      #   required: true
 jobs:
 print-tag:
   runs-on: ubuntu-latest
