--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -1,25 +1,34 @@
 name: Test workflow-dispatch
 on:
-  push:
-    branches: ['master']
   workflow_dispatch:
     inputs:
-      print_tags:
-        description: 'True to print to STDOUT'
+      select_environment:
+        description: 'Select environment'
         required: true
-        type: boolean
-      tags:
-        description: 'Test scenario tags'
+        default: 'dev'
+        type: choice
+        options:
+          - dev
+          - test
+          - prod
+      image_name:
+        description: 'Add image name'
         required: true
         type: string
-      # environment:
-      #   description: 'Environment to run tests against'
-      #   type: environment
-      #   required: true
+      image_tag:
+        description: 'Add image tag'
+        type: string
+        required: true
+      acl_name:
+        description: 'ACL name'
+        required: true
+        type: string
+      
+
 jobs:
   print-tag:
     runs-on: ubuntu-latest
-    if:  ${{ inputs.print_tags }} 
+    if:  ${{ inputs.image_name }} 
     steps:
       - name: Print the input tag to STDOUT
-        run: echo  The tags are ${{ inputs.tags }} 
+        run: echo  The image name is  ${{ inputs.acl_name }} 
