--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -33,6 +33,6 @@ jobs:
       - name: Print the input tag to STDOUT
         run: echo  The image name is  ${{ inputs.acl_name }} 
       - name: Set image name as env 
-        run: echo "env_image_name=${{ input.image_name }}" >> $GITHUB_ENV
+        run: echo "env_image_name=${{ inputs.image_name }}" >> $GITHUB_ENV
       - name: print the image name from env
         run: echo "Rahees your image name from env is ${{ env.env_image_name }}"
