--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -41,3 +41,7 @@ jobs:
         run: ls -ll && pwd
       - name: cat scripts/print_inputs.sh
         run: cat scripts/print_inputs.sh
+      - name: Passing workflow job env to shell script
+        run: |
+        chmod +x scripts/print_inputs.sh
+        ./scripts/print_inputs.sh
