--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -36,6 +36,10 @@ jobs:
         run: echo "env_image_name=${{ inputs.image_name }}" >> $GITHUB_ENV
       - name: print the image name from env
         run: echo "Rahees your image name from env is ${{ env.env_image_name }}"
+      - name: Set select_environment as Github Action environment
+        run: echo "selected_env_name=${{ inputs.select_environment }}" >> $GITHUB_ENV
+      - name: Print select_environment value 
+        run: echo "Rahees slected env value is -->> ${{ env.selected_env_name }}"
       - uses: actions/checkout@v4
       - name: execute ls command
         run: ls -ll && pwd
