--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -20,7 +20,7 @@ on:
         type: string
         required: true
       acl_name:
-        description: 'ACL name'
+        description: 'ACR name'
         required: true
         type: string
       
@@ -33,7 +33,7 @@ jobs:
       - name: Print the input tag to STDOUT
         run: echo  The image name is  ${{ inputs.acl_name }} 
       - name: Set image name as env 
-        run: echo "env_image_name=${{ inputs.image_name }}" >> $GITHUB_ENV
+        run: echo "ACL_NAME=${{ inputs.acl_name }}" >> $GITHUB_ENV
       - name: print the image name from env
         run: echo "Rahees your image name from env is ${{ env.env_image_name }}"
       - name: Set select_environment as Github Action environment
