using workflow envs in script

--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -26,6 +26,8 @@ on:
       
 env: 
   IMAGE_NAAM: ${{ inputs.image_name }}
+  IMAGE_TAG: ${{ inputs.image_name }}
+  ACL_NAAM: ${{ inputs.acl_name }}
 jobs:
   print-tag:
     runs-on: ubuntu-latest
