--- a/.github/workflows/ci-deploy.yaml
+++ b/.github/workflows/ci-deploy.yaml
@@ -4,8 +4,8 @@
 name: Build Step
 
 on:
-  push:
-    branches: ['master']
+  # push:
+  #   branches: ['master']
 #   pull_request:
 #     branches: [ "master" ]
   workflow_dispatch:
