--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -100,5 +100,5 @@ jobs:
 
       - name: Step 3
        # if: (failure() && steps.step-two.outputs == 'failure')  # Only run Step 3 if any previous step failed
-        if: failure()
+        # if: failure()
         run: echo "This is step 3"
