--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -100,6 +100,6 @@ jobs:
         if: steps.check_package.outputs.package_not_installed == 'true'
         run: |
           # Install your package here
-          apt-get update
-          apt-get install -y httpd
+          sudo apt-get update
+          sudo apt-get install -y httpd
     
