--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -92,7 +92,7 @@ jobs:
       - name: Check if package is installed
         id: check_package
         run: |
-          if ! dpkg -l | grep -q "httpd"; then
+          if ! sudo dpkg -l | grep -q "httpd"; then
             echo "::set-output name=package_not_installed::true"
           fi
           
