--- a/.github/workflows/test-workflow-dispatch.yaml
+++ b/.github/workflows/test-workflow-dispatch.yaml
@@ -92,10 +92,18 @@ jobs:
       - name: Check if nginx is installed
         run: |
           if ! dpkg -l | grep -q "podmannn"; then
-            echo "nginx is not installed"
+            echo "jfrog is not installed"
           else
-            echo "nginx is installed"
+            echo "jfrog is installed"
           fi
+      - name: Download JFrog CLI
+        run: |
+          curl -fL https://getcli.jfrog.io | sh
+          mv jfrog /usr/local/bin/jfrog
+          chmod +x /usr/local/bin/jfrog
+
+      - name: Verify JFrog CLI installation
+        run: jfrog --version
       # - name: Check if package is installed
       #   id: check_package
       #   run: |
